# Mnemosyne

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
agents/: router.py
agents/ingestion/: graph.py  nodes.py  state.py
agents/merge/: graph.py  nodes.py
agents/retrieval/: graph.py  nodes.py  state.py
agents/session/: graph.py  nodes.py  state.py
chunking/: base.py  fixed.py  recursive.py  selector.py  semantic.py  sentence.py  structural.py
config/: logging.py  settings.py
embedding/: cache.py  local.py  openai.py  provider.py  tiered.py
evals/: chunking_bench.py  conflict_bench.py  dedup_bench.py  golden_set.json  harness.py  latency_bench.py  llm_judge.py  locomo.py  prompt_ab.py  run_all.py
infra/: Dockerfile
jobs/: decay_sweep.py  index_rebuild.py  refresh.py  retry_stuck_ingests.py
llm/: __init__.py  anthropic.py  factory.py  gemini.py  local.py  openai.py  provider.py
mcp_local/: auth.py  sanitize.py  server.py  tools.py
memory/: access.py  decay.py  dedup.py  promote.py  types.py
mnemosyne.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
observability/: health.py  metrics.py  tracing.py
prompts/: ingestion.yaml  registry.py  retrieval.yaml  session.yaml
retrieval/: assembler.py  bm25.py  dense.py  reranker.py  rrf.py
storage/: encrypt.py  models.py  pg.py  redis.py  rls.py  s3.py
storage/migrations/: env.py
tests/e2e/: test_full_convo.py
tests/integration/: test_ingestion_pipeline.py  test_mcp_tools.py  test_session_init.py  (+1 more)
(+7 files in other folders)
